Fixed problems content menus sticking out of the edit bar under various font sizes. This closes #10736.
svn path=/plonetheme.sunburst/trunk/; revision=37963

--- a/plonetheme/sunburst/skins/sunburst_styles/public.css
+++ b/plonetheme/sunburst/skins/sunburst_styles/public.css
@@ -836,6 +836,7 @@ dl.error dd {
     font-size: 80%;
     min-height: 2em;
     margin-bottom: 1em;
+    padding-top: 0.05em;
 }
 #content-views {
     float: left;
